Release Notes
=============
==== post Jena 2.5.5

Typed literals:
    o Fixed bug in retrieval of decimal values with trailing fractional
      zeros by canonicalizing values after parsing and improving
      canonicalization.
      
==== Jena 2.5.5

Jar changes:
    o lucene-core has been upgraded from lucene-core-2.0.0 to lucene-2.2.0.jar.
    o logging-commons-1.1.jar upgraded to logging-commons-1.1.1.jar 

Deprecated Method Removal Frenzy
    o A bunch of methods in Resource, Model, ModelCon, and Statement have
      for a while now been marked as deprecated. These methods took literal
      values for the object of a statement and used the old treat-it-as-a-string
      approach rather than the newer typed-literal approach.

    o These deprecated methods have been removed. However, to allow migrators
      an easier life and to avoid requiring many many calls of
      createTypedLiteral (which needs a model, not always conveniently to hand),
      typed-literal versions of these methods have been added to the interfaces.

    o Model has grown:

      * addLiteral( Resource, Property, Various )
      * listResourcesWithProperty( Property, Various )
      * createLiteralStatement( Resource, Property, Various )
      * listLiteralStatements( Resource, Property, Various )
      * listResourcesWithProperty( Property, Various )

    o Resource has grown:

      * addLiteral( Property, Various )
      * hasLiteral( Property, Various )

    o Statement has grown:

      * changeObject( Various )

      where `Various` is one of float, double, long,boolean, char, short,
      int, or object [short & int may be missing in some cases].

    o As signalled in the Jena 2.5 release, the dedicated DAML API has
      now been removed. Users who still process DAML+OIL ontologies should
      switch to using the generic OntModel with the DAML profile.

PrefixMapping loses deprecated usePrefix
    o  The deprecated PrefixMapping method `usePrefix` has been removed.